fixed icons not showing by downloading and adding them into icons folder

--- a/style.css
+++ b/style.css
@@ -359,10 +359,8 @@ footer form button {
 /* media queries for tablet mode */
 
 @media only screen and (min-width:768px) and (max-width:1023px) {
-    section .sectionCategories {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 10px;
+    main {
+        padding: 0px 10px;
     }
 
     .mainContainer {
@@ -371,6 +369,21 @@ footer form button {
         padding: 10px 20px;
         width: 100vw;
         gap: 15px;
+    }
+
+    aside {
+        display: none;
+    }
+
+    section {
+        width: auto;
+    }
+
+    section .sectionCategories {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 5px;
+        width: 100%;
     }
 
     .headerContainer {
